Add more statistics data
